# fogl

./: .gitignore  LICENSE  README.md  example.py  pyproject.toml  setup.py
examples/: example.py
examples/glsl/: copy_fragment.glsl  simple_copy_frag.glsl  view_fragment.glsl  view_vertex.glsl
fogl/: buffer.py  debug.py  framebuffer.py  glutil.py  mesh.py  obj.py  shader.py  texture.py  util.py  vao.py  vertex.py
glsl/: view_fragment.glsl
ugly/: __init__.py  buffer.py  framebuffer.py  glutil.py  matrix.py  mesh.py  shader.py  texture.py  util.py  vao.py  vertex.py
