[tool.poetry]
name = "fogl"
version = "0.1.0"
description = "A collection of convenient wrappers for OpenGL."
authors = ["Johan Forsberg <johan@slentrian.org>"]

[tool.poetry.dependencies]
python = "^3.6"
pyglet = {path = "pyglet"}
euclid3 = "^0.1.0"
pypng = "^0.0.20"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
